--- a/css/outpass.css
+++ b/css/outpass.css
@@ -1,121 +1,123 @@
 :root {
-    --dark-brown: #191308;
-    --light-brown:#322A26;
-    --purple:#9CA3DB;
-    --dark-blue: #454B66;
-    --light-blue: #677DB7;
- }
+   --dark-brown: #191308;
+   --light-brown: #322A26;
+   --purple: #9CA3DB;
+   --dark-blue: #454B66;
+   --light-blue: #677DB7;
+}
 
- body{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    min-height:100vh;
-    padding-bottom: 20px;
-    margin:0 auto;
-    flex-direction: column;
-    background-color: #c7cadd;
- }
+html {
+   content-visibility: auto;
+   contain-intrinsic-size: 1px 5000px;
+}
 
- .nav_bar {
-    padding: 5px;
-    background-color: var(--light-brown);
-    color:white;
-    width: 96%;
-    margin: 20px;
-    border-radius: 8px;
- }
-
- .nav_bar a {
-
-    position: relative;
-    float: left;
-    text-decoration: none;
-    color: white;
- }
-
- .content_pane {
-
-    width: 80%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 50px;
-    row-gap: 50px;
- }
-
- .calendar {
-
-    position: relative;
-
-    background-color: #fff;
-    box-sizing: border-box;
-    box-shadow: 0 5px 50px rgba(#000, 0.5);
-    border-radius: 8px;
-
-  }
- .calendar__date {
-    padding: 30px;
-    display: grid;
-    grid-template-columns: repeat(7, minmax(25px, 1fr));
-    grid-gap: 10px;
-    box-sizing: border-box;
-  }
+body {
+   margin: 0 auto;
+   background-color: #c7cadd;
+   min-height: 100vh;
+   background-image: url("../images/bg.jpg");
+   display: grid;
+   grid-template-columns: 1fr repeat(5, 1fr);
+   grid-template-rows: 1fr;
+   column-gap: 20px;
+   font-family: "Fira+Sans+Condensed", sans-serif;
+}
 
 
-  .calendar__day {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    font-weight: 800;
-    color: var(--dark-blue);
+.nav_bar {
+   padding: 5px;
+   background-color: rgba(69, 75, 102, 0.6);
+   /*background-image: url("mngs.png");*/
+   color: white;
+   grid-column-start: 1;
+   grid-column-end: 2;
+   grid-row-start: 1;
+   grid-row-end: 2;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: flex-start;
 
-  }
-  
-  .calendar__number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    color: var(--light-blue);
-    }
-    
-    .emergency_section, .review_section, .pending_section{
+}
 
-        border-radius: 8px;
-        background-color: white;
-    }
+.nav_bar a {
 
-    .section_header {
-        background-color:var(--dark-blue);
-        color: white; 
-        padding: 10px;
-        border-radius: 8px 8px 0px 0px;
-    }
+   position: relative;
+   float: left;
+   text-decoration: none;
+   color: white;
+}
 
-    .section_item {
-        background-color: var(--light-blue);
-        padding:10px;
-        color: white; 
-        margin: 5px;
-        border-radius: 8px;
-    
-    }
+.content_pane {
 
-    .passes {
-      
-    }
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   grid-template-rows: 50px 1fr 100px;
+   column-gap: 20px;
+   row-gap: 20px;
+   margin: 20px;
+   grid-column-start: 2;
+   grid-column-end: 7;
+   grid-row-start: 1;
+   grid-row-end: 2;
+}
 
-    .button{
-     
-      text-align:center;
-      padding-left: 0.5rem;
-      padding-right: 0.5rem;
-      background-color: var(--light-blue);
-      color: #fff;
-      border-radius: 0.5rem;
-    }
+.outpass_details {
+   grid-column-start: 2;
+   grid-column-end: 3;
+   grid-row-start: 2;
+   grid-row-end: 3;
+   border-radius: 8px;
+   background-color: white;
+}
 
-    
+.student_details {
+
+   border-radius: 8px;
+   background-color: white;
+   grid-column-start: 1;
+   grid-column-end: 2;
+   grid-row-start: 2;
+   grid-row-end: 4;
+}
+
+.choice {
+   border-radius: 8px;
+   background-color: white;
+   grid-column-start: 2;
+   grid-column-end: 3;
+   grid-row-start: 3;
+   grid-row-end: 4;
+}
+.section_header {
+   background-color: white;
+   padding: 10px;
+   border-radius: 8px 8px 0px 0px;
+}
+.button {
+
+   text-align: center;
+   padding-left: 0.5rem;
+   padding-right: 0.5rem;
+   background-color: var(--light-blue);
+   color: #fff;
+   border-radius: 0.5rem;
+}
+
+
+table {
+   background-color: #eff1f9;
+   margin: 15px;
+   font-size: 15px;
+   border-radius: 8px;
+}
+
+td {
+   padding-right:2rem;
+   padding-left:2rem;
+   width: 50%;
+}
+
+th {
+   font-weight: 800;
+}
