--- a/css/student.css
+++ b/css/student.css
@@ -1,70 +1,93 @@
 :root {
     --dark-brown: #191308;
-    --light-brown:#322A26;
-    --purple:rgb(156, 163, 219);
+    --light-brown: #322A26;
+    --purple: rgb(156, 163, 219);
     --dark-blue: #454B66;
     --light-blue: #677DB7;
- }
+}
 
- body{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    min-height:100vh;
-    padding-bottom: 20px;
-    margin:0 auto;
-    flex-direction: column;
+
+html {
+    content-visibility: auto;
+    contain-intrinsic-size: 1px 5000px;
+}
+
+body {
+    margin: 0 auto;
     background-color: #c7cadd;
- }
+    min-height: 100vh;
+    background-image: url("../images/bg.jpg");
+    display: grid;
+    grid-template-columns: 1fr repeat(5, 1fr);
+    grid-template-rows: 1fr;
+    column-gap: 20px;
+    font-family: "Fira+Sans+Condensed", sans-serif;
+}
 
- .nav_bar {
+.nav_bar {
     padding: 5px;
-    background-color: var(--light-brown);
-    color:white;
-    width: 96%;
-    margin: 20px;
-    border-radius: 8px;
- }
+    background-color: rgba(69, 75, 102, 0.6);
+    /*background-image: url("mngs.png");*/
+    color: white;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 
- .nav_bar a {
+}
+
+.nav_bar a {
 
     position: relative;
     float: left;
     text-decoration: none;
     color: white;
- }
+}
 
- .content_pane {
+.content_pane {
 
-    width: 80%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 50px;
-    row-gap: 50px;
- }
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50px 1fr 1fr;
+    column-gap: 30px;
+    row-gap: 30px;
+    margin: 20px;
+    grid-column-start: 2;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 2;
 
- .calendar {
+}
+
+.calendar {
 
     position: relative;
     background-color: #fff;
     box-sizing: border-box;
     box-shadow: 0 5px 50px rgba(#000, 0.5);
     border-radius: 8px;
-    
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
 
-  }
- .calendar__date {
+
+}
+
+.calendar__date {
     padding: 30px;
     display: grid;
     grid-template-columns: repeat(7, minmax(25px, 1fr));
     grid-gap: 10px;
     box-sizing: border-box;
-  }
+}
 
 
-  .calendar__day {
+.calendar__day {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,89 +95,124 @@
     font-weight: 800;
     color: var(--dark-blue);
 
-  }
-  
-  .calendar__number {
+}
+
+.calendar__number {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 30px;
     color: var(--light-blue);
-    }
-    
-    .outpass_section {
-        grid-row-start: 1;
-        grid-row-end: 3;
-        border-radius: 8px;
-        background-color: white;
-        color:var(--dark-blue);
-    }
- 
-    .pending_section{
+}
 
-        border-radius: 8px;
-        background-color: white;
-        text-align: center;
-    }
+.outpass_section {
+    grid-row-start: 2;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    border-radius: 8px;
+    background-color: white;
+    color: var(--dark-blue);
+}
 
-    .section_header {
-        background-color:var(--dark-blue);
-        color: white; 
-        padding: 10px;
-        border-radius: 8px 8px 0px 0px;
-        text-align: center;
-    }
+.pending_section {
 
-    .section_item {
-        background-color: var(--light-blue);
-        padding:10px;
-        color: white; 
-        margin: 5px;
-        border-radius: 8px;
-        text-align: center;
-    }
+    border-radius: 8px;
+    background-color: white;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
 
-    fieldset {
-        margin:20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
+.section_header {
+   background-color: white;
+   padding: 10px;
+   border-radius: 8px 8px 0px 0px;
+}
 
-    button {
-        background-color: var(--purple);
-        height: 30px;
-        border:none;
-        border-radius: 8px;
-        padding: 5px;
-        color:white;
-    }
+.section_item {
+    background-color: var(--light-blue);
+    padding: 10px;
+    color: white;
+    margin: 5px;
+    border-radius: 8px;
+    text-align: center;
+}
 
-    button:hover{
-        background-color: var(--dark-blue);
-        color:var(--light-blue);
-        border:1px var(--purple) solid;
-        box-shadow: 2px 2px 2px var(--purple);
-    }
+.request_form {
 
-    li {
-        margin-top: 10px;
-    }
+    margin: 20px;
+    display: flex;
+    background-color: #eff1f9;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-radius: 8px;
+    padding: 20px;
 
-    .status {
-        background-color: rgb(83, 138, 83);
-        color: white;
-        padding: 20px;
-        border-radius: 8px;
-        margin: 15px;
-        text-align: center;
-    }
+}
+input {
+    width: 80%;
+}
+button {
+    background-color: var(--purple);
+    height: 30px;
+    border: none;
+    border-radius: 8px;
+    padding: 5px;
+    color: white;
+}
 
-    .outpass {
-        background-color: rgb(230, 232, 244);
-        margin: 15px;
-        border-radius: 8px;
-        padding: 10px;
-        
-    }
+fieldset {
+    width: 95%;
+    border-radius: 8px;
+}
+
+button:hover {
+    background-color: var(--dark-blue);
+    color: var(--light-blue);
+    border: 1px var(--purple) solid;
+    box-shadow: 2px 2px 2px var(--purple);
+}
+
+li {
+    margin-top: 10px;
+}
+
+.form_div{
+    margin-top:20px;
+    margin-left: 10px;
+    width: 95%;
+}
+.left_form_elt {
+    margin: 0;
+    float: left;
+}
+.right_form_elt {
+    margin-left: 50%;
+}
+
+
+.status {
+    background-color: rgb(83, 138, 83);
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+    margin: 15px;
+    text-align: center;
+}
+
+.outpass {
+    background-color: rgb(230, 232, 244);
+    margin: 15px;
+    border-radius: 8px;
+    padding: 10px;
+}
+.card {
+    text-align: center;
+ }
+ .passes {
+   
+
+ }
