--- a/css/warden.css
+++ b/css/warden.css
@@ -2,29 +2,39 @@
    --dark-brown: #191308;
    --light-brown: #322A26;
    --purple: #9CA3DB;
-   --dark-blue: #454B66;
+   --dark-blue: rgb(69, 75, 102);
    --light-blue: #677DB7;
 }
-
+html {
+   content-visibility: auto;
+   contain-intrinsic-size: 1px 5000px;
+}
 body {
    margin: 0 auto;
    background-color: #c7cadd;
    min-height: 100vh;
-
+   background-image: url("../images/bg.jpg");
    display: grid;
    grid-template-columns: 1fr repeat(5, 1fr);
    grid-template-rows: 1fr;
+   column-gap: 20px;
+   font-family: "Fira+Sans+Condensed",sans-serif;
 }
 
 
 .nav_bar {
    padding: 5px;
-   background-color: var(--dark-blue);
+   background-color: rgba(69, 75, 102,0.6);
+   /*background-image: url("mngs.png");*/
    color: white;
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;
+   display:flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: flex-start;
 
 }
 
@@ -39,8 +49,8 @@ body {
 .content_pane {
 
    display: grid;
-   grid-template-columns: 1fr 1fr 1fr 1fr;
-   grid-template-rows: 1fr 1fr 1.5fr;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: 50px 220px 1fr 1.5fr;
    column-gap: 20px;
    row-gap: 20px;
    margin: 20px;
@@ -51,9 +61,24 @@ body {
 
 }
 
+.calendar_div
+{
+   border-radius: 8px;
+   color: #454B66;
+   background-color: white;
+   grid-row-start: 2;
+   grid-row-end: 3;
+   grid-column-start: 1;
+   grid-column-end: 2;
+
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-template-rows: 220px 1fr;
+   row-gap: 20px;
+
+}
 .calendar {
 
-   position: relative;
    background-color: #fff;
    box-sizing: border-box;
    box-shadow: 0 5px 50px rgba(#000, 0.5);
@@ -65,7 +90,17 @@ body {
 
 
 }
+.num_left{
+  
+   background-color: #fff;
+   border-radius: 8px;
+   grid-row-start: 2;
+   grid-row-end: 3;
+   grid-column-start: 1;
+   grid-column-end: 2;
+   text-align: center;
 
+}
 .calendar__date {
    padding: 15px;
    display: grid;
@@ -98,21 +133,22 @@ body {
    border-radius: 8px;
    color: #454B66;
    background-color: white;
-   grid-row-start: 2;
-   grid-row-end: 3;
-   grid-column-start: 3;
-   grid-column-end: 5;
+   grid-row-start: 3;
+   grid-row-end: 4;
+   grid-column-start: 2;
+   grid-column-end: 4;
 }
+
 
 .pending_section {
 
    border-radius: 8px;
    color: #454B66;
    background-color: white;
-   grid-row-start: 3;
-   grid-row-end: 4;
+   grid-row-start: 4;
+   grid-row-end: 5;
    grid-column-start: 1;
-   grid-column-end: 5;
+   grid-column-end: 4;
 }
 
 .emergency_section {
@@ -122,8 +158,8 @@ body {
    background-color: white;
    grid-row-start: 2;
    grid-row-end: 3;
-   grid-column-start: 1;
-   grid-column-end: 3;
+   grid-column-start: 2;
+   grid-column-end: 4;
 }
 
 .section_header {
@@ -132,27 +168,35 @@ body {
    border-radius: 8px 8px 0px 0px;
 }
 
-.section_item {
-   background-color: var(--light-blue);
-   padding: 10px;
-   color: white;
-   margin: 5px;
-   border-radius: 8px;
-}
-
 .passes {
+
+   color:var(--light-blue);
+   border-radius:8px;
    text-align: left;
-   margin: 10px;
-   height: 200px;
-   width: 100%;
-   overflow-x: hidden;
-   overflow-y: scroll;
+   border-spacing: 25px 5px;
+   table-layout: fixed;
+   width:95%;
+   margin-left: 20px;
+   margin-right: 20px;
+   margin-bottom: 20px;
 }
 
-tr {
-   height: fit-content;
+table {
+   background-color: #eff1f9;
 }
 td {
-   height: fit-content;
-   width: fit-content;
+   padding: 5px;
+}
+
+th {
+   font-weight: 800;
+}
+
+
+h3 {
+   font-weight: 600;
+}
+
+table {
+   font-size: 15px;
 }
