--- a/css/warden.css
+++ b/css/warden.css
@@ -14,6 +14,8 @@ body {
    background-color: #c7cadd;
    min-height: 100vh;
    background-image: url("../images/bg.jpg");
+   background-repeat: no-repeat;
+background-size: cover;
    display: grid;
    grid-template-columns: 1fr repeat(5, 1fr);
    grid-template-rows: 1fr;
