--- a/css/outpass.css
+++ b/css/outpass.css
@@ -4,11 +4,13 @@
    --purple: #9CA3DB;
    --dark-blue: #454B66;
    --light-blue: #677DB7;
+   --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
 html {
    content-visibility: auto;
    contain-intrinsic-size: 1px 5000px;
+   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
 body {
@@ -20,13 +22,12 @@ body {
    grid-template-columns: 1fr repeat(5, 1fr);
    grid-template-rows: 1fr;
    column-gap: 20px;
-   font-family: "Fira+Sans+Condensed", sans-serif;
+   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
-
 
 .nav_bar {
    padding: 5px;
-   background-color: rgba(69, 75, 102, 0.6);
+   background-color: rgba(69, 75, 102);   
    /*background-image: url("mngs.png");*/
    color: white;
    grid-column-start: 1;
@@ -52,7 +53,7 @@ body {
 
    display: grid;
    grid-template-columns: 1fr 1fr;
-   grid-template-rows: 50px 1fr 100px;
+   grid-template-rows: 50px 1fr 70px 150px;
    column-gap: 20px;
    row-gap: 20px;
    margin: 20px;
@@ -73,7 +74,7 @@ body {
 
 .student_details {
 
-   border-radius: 8px;
+   border-radius: 2px;
    background-color: white;
    grid-column-start: 1;
    grid-column-end: 2;
@@ -82,6 +83,7 @@ body {
 }
 
 .choice {
+   
    border-radius: 8px;
    background-color: white;
    grid-column-start: 1;
@@ -92,28 +94,42 @@ body {
    align-items: center;
    justify-content: space-around;
 }
+.comment_form{
+   grid-column-start: 1;
+   grid-column-end: 3;
+   grid-row-start: 4;
+   grid-row-end: 5;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-around;
+   padding-top: 10px;
+   padding-bottom: 10px;
+}
 .section_header {
    background-color: white;
    padding: 10px;
-   border-radius: 8px 8px 0px 0px;
+   color: white;
 }
 .button {
 
    text-align: center;
-   padding-left: 0.5rem;
-   padding-right: 0.5rem;
    background-color: var(--light-blue);
-   color: #fff;
-   border-radius: 0.5rem;
-   width: 20%;
+   color: #000000;
+   border-radius: 0rem;
+   padding: 20px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+}
 }
 
 
 table {
-   background-color: #eff1f9;
+   background-color: white;
    margin: 15px;
    font-size: 15px;
    border-radius: 8px;
+   font-weight: 0;
 }
 
 td {
@@ -129,19 +145,62 @@ th {
 #option_form {
    display: none;
    background-color: #eff1f9;
-   border-radius: 8px;
+   border-radius: 3px;
    padding: 10px; 
 }
 
 a {
    text-decoration: none;
-   color: white;
-   padding: 15px;
-   height: 25px;
+   color: #000000;
 }
 
-a:hover {
-   color:#454B66;
-   font-size: 20px;
-   
+.button:hover{
+   cursor: pointer;
+   padding: 25px;
+   padding-top: 15px;
+   padding-bottom: 15px;
+}
+h3{
+   font-weight: normal;
+   font-size: 14px;
+}
+
+#reject_button{
+   background-color: rgb(228, 11, 11);
+   border:0.5px solid rgb(72, 2, 2);
+   box-shadow: 0.5px 0.5px rgb(228, 11, 11);
+}
+#accept_button{
+   border:0.5px solid rgb(22, 67, 10);
+   background-color: rgb(41, 181, 6);
+   color: #000000;
+}
+
+#review_button{
+   background-color: rgb(247, 255, 3);
+   border:0.5px solid rgb(11, 11, 11);
+}
+
+textarea{
+   resize: none;
+   border-radius: 5px;
+   padding: 5px;
+}
+
+input[type=submit]{
+  background-color:  var(--light-blue);
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover{
+   margin-top: 10px;
+   cursor: pointer;
+   padding: 25px;
+   padding-top: 15px;
+   padding-bottom: 15px;
 }
