--- a/css/student.css
+++ b/css/student.css
@@ -1,154 +1,130 @@
 :root {
     --dark-brown: #191308;
     --light-brown: #322A26;
-    --purple: rgb(156, 163, 219);
-    --dark-blue: #454B66;
+    --purple: #9CA3DB;
+    --dark-blue: rgb(69, 75, 102);
     --light-blue: #677DB7;
-}
-
-
-html {
+ }
+ 
+ html {
     content-visibility: auto;
     contain-intrinsic-size: 1px 5000px;
-}
-
-body {
+ }
+ 
+ body {
     margin: 0 auto;
-    background-color: #c7cadd;
     min-height: 100vh;
-    background-image: url("../images/bg.jpg");
+    background-color: rgb(244, 240, 240);
+    font-family: "Fira+Sans+Condensed", sans-serif;
+ 
     display: grid;
     grid-template-columns: 1fr repeat(5, 1fr);
     grid-template-rows: 1fr;
     column-gap: 20px;
-    font-family: "Fira+Sans+Condensed", sans-serif;
-}
-
-.nav_bar {
+    
+ }
+ 
+ 
+ /* Nav bar to the left */
+ .nav_bar {
+ 
     padding: 5px;
-    background-color: rgba(69, 75, 102, 0.6);
-    /*background-image: url("mngs.png");*/
+    background-color: var(--dark-blue);
     color: white;
+    
+ 
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
+ 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
-
-}
-
-.nav_bar a {
-
-    position: relative;
-    float: left;
-    text-decoration: none;
-    color: white;
-}
-
-.content_pane {
-
+ 
+ }
+ 
+ /* div for all body contents */
+ .content_pane {
+ 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 50px 1fr 1fr;
-    column-gap: 30px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 50px 150px repeat(2, 200px);
+    column-gap: 20px;
     row-gap: 30px;
     margin: 20px;
+ 
     grid-column-start: 2;
     grid-column-end: 7;
     grid-row-start: 1;
     grid-row-end: 2;
+ 
+ }
 
-}
-
-.calendar {
-
-    position: relative;
-    background-color: #fff;
-    box-sizing: border-box;
-    box-shadow: 0 5px 50px rgba(#000, 0.5);
-    border-radius: 8px;
+ .top_section {
     grid-row-start: 2;
     grid-row-end: 3;
-    grid-column-start: 3;
-    grid-column-end: 4;
-
-
-}
-
-.calendar__date {
-    padding: 30px;
+    grid-column-start: 1;
+    grid-column-end: 5;
+ 
     display: grid;
-    grid-template-columns: repeat(7, minmax(25px, 1fr));
-    grid-gap: 10px;
-    box-sizing: border-box;
-}
+    grid-template-columns: 200px 200px 1fr;
+    grid-template-rows: 150px;
+    column-gap: 40px;
+ }
+ 
+ .date_display{
 
-
-.calendar__day {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    font-weight: 800;
-    color: var(--dark-blue);
-
-}
-
-.calendar__number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    color: var(--light-blue);
-}
-
-.request_outpass_section {
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
     grid-column-start: 1;
-    grid-column-end: 3;
-    border-radius: 8px;
-    background-color: white;
+    grid-column-end: 2;
+ 
     color: var(--dark-blue);
-}
-
-.outpass_status_section {
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    border-radius: 8px;
     background-color: white;
-    color: var(--dark-blue);
-}
-
-
+    box-shadow: 2px 2px 4px gray;
+ 
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding:15px;
+ }
+ 
 .pending_section {
 
-    border-radius: 8px;
     background-color: white;
+    color: var(--dark-blue);
+    box-shadow: 2px 2px 4px gray;
+
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding:15px;
+}
+
+/* main body */
+
+.request_outpass_section {
+
     grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 3;
+    grid-row-end: 5;
+    grid-column-start: 1;
     grid-column-end: 4;
-}
 
-.section_header {
-   background-color: white;
-   padding: 10px;
-   border-radius: 8px 8px 0px 0px;
-}
+    background-color: white;
+    color: var(--dark-blue);
+    box-shadow: 2px 2px 4px gray;
 
-.section_item {
-    background-color: var(--light-blue);
-    padding: 10px;
-    color: white;
-    margin: 5px;
-    border-radius: 8px;
-    text-align: center;
+    overflow: scroll;
 }
 
 .request_form {
@@ -159,10 +135,34 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    border-radius: 8px;
     padding: 20px;
 
 }
+
+.outpass_status_section {
+    
+    grid-row-start: 2;
+    grid-row-end: 5;
+    grid-column-start: 4;
+    grid-column-end: 5;
+
+    background-color: white;
+    color: var(--dark-blue);
+    box-shadow: 2px 2px 4px gray;
+
+    overflow: hidden;
+}
+
+
+.section_item {
+    background-color: var(--light-blue);
+    padding: 10px;
+    color: white;
+    margin: 5px;
+    border-radius: 8px;
+    text-align: center;
+}
+
 input {
     width: 80%;
 }
