--- a/css/student.css
+++ b/css/student.css
@@ -2,7 +2,7 @@
     --dark-brown: #191308;
     --light-brown: #322A26;
     --purple: #9CA3DB;
-    --dark-blue: rgb(69, 75, 102);
+    --dark-blue: rgb(53, 59, 72);
     --light-blue: #677DB7;
  }
  
@@ -14,7 +14,7 @@
  body {
     margin: 0 auto;
     min-height: 100vh;
-    background-color: rgb(244, 240, 240);
+    background-color: rgb(161, 169, 184);
     font-family: "Fira+Sans+Condensed", sans-serif;
  
     display: grid;
@@ -27,12 +27,11 @@
  
  /* Nav bar to the left */
  .nav_bar {
- 
+
     padding: 5px;
     background-color: var(--dark-blue);
     color: white;
     
- 
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
@@ -40,10 +39,49 @@
  
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: space-between;
  
  }
+
+.menu_components {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
+   width: 100%;
+}
+.menu_components a,button{
+   margin-top: 40px;
+   font-size: 16px;
+   font-weight: 400;
+   padding: 10px;
+   border-radius: 8px;
+   text-decoration: none;
+   color:white;
+   width: 100%;
+   
+}
+
+.menu_components a:hover{
+   background-color: #4d525e;
+   text-decoration: none;
+   color:white;
+}
+
+.profile {
+
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: center;
+
+   background-color: #4d525e;
+   padding: 10px;
+   border-radius: 8px;
+   width: 100%;
+   
+}
  
  /* div for all body contents */
  .content_pane {
