--- a/css/transport.css
+++ b/css/transport.css
@@ -1,11 +1,11 @@
 :root {
-    --dark-brown: #191308;
-    --light-brown: #322A26;
-    --purple: #9CA3DB;
-    --dark-blue: rgb(69, 75, 102);
-    --light-blue: #677DB7;
- }
- 
+   --dark-brown: #191308;
+   --light-brown: #322A26;
+   --purple: #9CA3DB;
+   --dark-blue: #353b48;
+   --light-blue: #677DB7;
+}
+
  html {
     content-visibility: auto;
     contain-intrinsic-size: 1px 5000px;
@@ -61,3 +61,109 @@
     grid-row-end: 2;
  
  }
+
+ .content_pane {
+
+   display: grid;
+   grid-template-columns: 1fr 200px;
+   grid-template-rows: 1fr;
+   column-gap: 20px;
+   row-gap: 30px;
+   margin: 20px;
+
+   grid-column-start: 2;
+   grid-column-end: 7;
+   grid-row-start: 1;
+   grid-row-end: 2;
+
+}
+
+ .scan_view {
+
+   grid-column-start: 1;
+   grid-column-end: 2;
+   grid-row-start: 1;
+   grid-row-end: 2;
+
+   font-size: 14px;
+ }
+
+ td {
+   font-size: 14px;
+ }
+
+ .nav_bar {
+
+   padding: 5px;
+   background-color: var(--dark-blue);
+   color: white;
+   
+   grid-column-start: 1;
+   grid-column-end: 2;
+   grid-row-start: 1;
+   grid-row-end: 2;
+
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
+
+}
+
+.profile {
+
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: center;
+   column-gap: 10px;
+
+   background-color: #4d525e;
+   padding: 10px;
+   border-radius: 8px;
+   width: 100%;
+   
+}
+
+.menu_components {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
+   width: 100%;
+}
+.menu_components a,button{
+   margin-top: 40px;
+   font-size: 16px;
+   font-weight: 400;
+   padding: 10px;
+   border-radius: 8px;
+   text-decoration: none;
+   color:white;
+   width: 100%;
+   
+}
+
+.menu_components a:hover{
+   background-color: #4d525e;
+   text-decoration: none;
+   color:white;
+}
+
+.date_display{
+
+   color: var(--dark-blue);
+   background-color: white;
+   box-shadow: 2px 2px 4px gray;
+
+   grid-column-start: 2;
+   grid-column-end: 3;
+   grid-row-start: 1;
+   grid-row-end: 2;
+
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   padding:15px;
+}
