--- a/css/warden.css
+++ b/css/warden.css
@@ -24,6 +24,12 @@ body {
    
 }
 
+#heading1 {
+   grid-column-start: 1;
+   grid-column-end: 5;
+   grid-row-start: 1;
+   grid-row-end: 2;
+}
 
 /* Nav bar to the left */
 .nav_bar {
