--- a/css/outpass.css
+++ b/css/outpass.css
@@ -139,8 +139,9 @@ body {
    grid-row-end: 2;
    display: flex;
    flex-direction: column;
-   align-items: center;
-   justify-content: space-between;
+   align-items: flex-start;
+   justify-content: flex-start;
+   gap:20px;
    padding: 10px;
 }
 
